# Stalker2-Mod-Manager

./: .gitignore  Cargo.toml  README.md
.github/workflows/: release.yml
docs/: homepage.md
src/: docs_window.rs  install_dialog.rs  lib.rs  main.rs  mod_info.rs  mod_manager.rs  nexus_api.rs  settings.rs  settings_dialog.rs
