[package]
name = "stalker2-mod-manager"
version = "0.2.0"
edition = "2021"
authors = ["Sudo-Ivan>"]
description = "A mod manager for S.T.A.L.K.E.R. 2: Heart of Chornobyl"

[dependencies]
gtk = { package = "gtk4", version = "0.7", features = ["v4_8"] }
gdk = { package = "gdk4", version = "0.7" }
gio = "0.18.2"
glib = "0.18.2"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
directories = "5.0"
anyhow = "1.0"
url = "2.5.0"
pulldown-cmark = "0.9"
zip = "0.6"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
